--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "release" : "standard-version"
   },
   "dependencies": {
     "@nestjs/common": "^7.4.2",
@@ -51,6 +52,7 @@
     "jest": "26.4.1",
     "lint-staged": ">=10",
     "prettier": "^2.0.5",
+    "standard-version": "^9.0.0",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
     "ts-loader": "^8.0.2",
