--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^7.4.2",
     "@nestjs/core": "^7.4.2",
     "@nestjs/platform-express": "^7.4.2",
+    "@prisma/client": "2.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.2"
@@ -35,7 +36,7 @@
     "@nestjs/cli": "^7.4.1",
     "@nestjs/schematics": "^7.0.1",
     "@nestjs/testing": "^7.4.2",
-    "@prisma/cli": "^2.5.1",
+    "@prisma/cli": "2.5.1",
     "@types/express": "^4.17.7",
     "@types/jest": "26.0.10",
     "@types/node": "^14.6.0",
