--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "release": "standard-version"
+    "release": "standard-version",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@nestjs/common": "^7.4.2",
@@ -31,8 +32,6 @@
     "rxjs": "^6.6.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^9.1.2",
     "@nestjs/cli": "^7.4.1",
     "@nestjs/schematics": "^7.0.1",
     "@nestjs/testing": "^7.4.2",
@@ -50,11 +49,9 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.19.0",
-    "husky": "^4.2.5",
     "jest": "26.4.1",
     "lint-staged": ">=10",
     "prettier": "^2.0.5",
-    "standard-version": "^9.0.0",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
     "ts-loader": "^8.0.2",
