--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -28,9 +28,12 @@ COPY ./package.json ./
 COPY ./yarn.lock ./
 
 # Install dependencies
+RUN apk add --no-cache make gcc g++ python
 RUN yarn global add pm2
 RUN yarn global add @nestjs/cli
 RUN yarn install
+# RUN npm rebuild bcrypt --build-from-source
+RUN apk del make gcc g++ python
 
 # Copy app files
 COPY . .
