feat(backend): finish user service and controller
I also fix the vscode eslint plugin configuration adding to settings
the workingDirectories key to eslint plugin.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
   "editor.tabSize": 2,
   "editor.trimAutoWhitespace": true,
   "editor.formatOnSave": false,
+  "eslint.workingDirectories": [
+    { "directory": "./packages/backend", "changeProcessCWD": true }
+  ],
   "files.exclude": {
     "**/.DS_Store": true,
     "**/.git": true,
