--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^7.4.2",
     "@nestjs/platform-express": "^7.4.2",
     "@prisma/client": "2.5.1",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
