--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,7 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "release": "standard-version",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@nestjs/common": "^7.4.2",
