--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,9 @@
 {
+  "command": {
+    "version": {
+      "message": "chore(release): publish %s"
+    }
+  },
   "ignoreChanges": [
     "**/__fixtures__/**",
     "**/__tests__/**",
