--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -16,12 +16,13 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:cov": "jest --coverage && yarn run make-badges",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "release": "standard-version",
     "lint-staged": "lint-staged",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "make-badges": "jest-badges-readme --coverageDir='./coverage'"
   },
   "dependencies": {
     "@nestjs/common": "^7.4.2",
@@ -40,6 +41,7 @@
     "@nestjs/cli": "^7.4.1",
     "@nestjs/schematics": "^7.0.1",
     "@nestjs/testing": "^7.4.2",
+    "@olavoparno/jest-badges-readme": "^1.5.1",
     "@prisma/cli": "2.5.1",
     "@types/express": "^4.17.7",
     "@types/jest": "26.0.10",
