--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   publish:
-    name: npm publish
+    name: Build, lint, test and release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
