chore(backend): add force exit to jest

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "lerna run start",
     "start:debug": "lerna run start:debug",
     "start:dev": "lerna run start:dev",
-    "test": "lerna run test",
+    "test": "lerna run test --parallel --",
     "test:cov": "lerna run test:cov --parallel --"
   },
   "devDependencies": {
