--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,11 @@
-name: release
+name: publish
 on:
   push:
     branches:
       - master
 jobs:
   publish:
-    name: Build, lint, test and release
+    name: release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
