--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -27,12 +27,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.4.2",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.4.2",
     "@nestjs/platform-express": "^7.4.2",
     "@nestjs/swagger": "^4.6.0",
     "@prisma/client": "2.5.1",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.2",
@@ -47,6 +50,7 @@
     "@types/express": "^4.17.7",
     "@types/jest": "26.0.10",
     "@types/node": "^14.6.0",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
