--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -30,9 +30,11 @@
     "@nestjs/common": "^7.4.2",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.4.2",
+    "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.4.2",
     "@nestjs/swagger": "^4.6.0",
     "@prisma/client": "2.5.1",
+    "@types/passport-local": "^1.0.33",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "passport": "^0.4.1",
