chore(root): remove yarn workspaces
The workspace configuration cause that the vscode-eslint plugin
does not work fine and is very hard to configure it correctly.
I prefer spend the time developing instead of configuring it.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
   "editor.trimAutoWhitespace": true,
   "editor.formatOnSave": false,
   "eslint.workingDirectories": [
-    { "directory": "./packages/backend", "changeProcessCWD": true }
+    { "pattern": "./packages/*/", "changeProcessCWD": true }
   ],
   "files.exclude": {
     "**/.DS_Store": true,
