--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,8 +18,8 @@
       "type": "node",
       "request": "attach",
       "name": "Debug: Backend",
-      "remoteRoot": "/backend",
-      "localRoot": "${workspaceFolder}",
+      "remoteRoot": "/usr/backend",
+      "localRoot": "${workspaceFolder}/packages/backend",
       "protocol": "inspector",
       "port": 9229,
       "restart": true,
