feat(root): add docker-compose service for admin

--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@ BACKEND_MYSQL_DB=backend
 BACKEND_MYSQL_PORT=3306
 BACKEND_MYSQL_HOST=backend_db
 BACKEND_DATABASE_URL="mysql://user:password@backend_db:3306/backend"
+
+# Admin
+ADMIN_WORKING_DIR=usr/admin
