fix(backend): update dependencies, database and code
I also update the root dependencies

--- a/.env
+++ b/.env
@@ -8,15 +8,26 @@ NODE_ENV=development
 START_TYPE=debug
 DB_FOLDER=db
 
+# Admin
+ADMIN_WORKING_DIR=usr/admin
+
 # Backend
 BACKEND_WORKING_DIR=usr/backend
+
+# DB MySql
 BACKEND_MYSQL_ROOT_PASSWORD=rootpassword
 BACKEND_MYSQL_PASSWORD=password
 BACKEND_MYSQL_USER=user
 BACKEND_MYSQL_DB=backend
 BACKEND_MYSQL_PORT=3306
 BACKEND_MYSQL_HOST=backend_db
-BACKEND_DATABASE_URL="mysql://user:password@backend_db:3306/backend"
+BACKEND_MYSQL_DATABASE_URL="mysql://user:password@backend_db:3306/backend"
 
-# Admin
-ADMIN_WORKING_DIR=usr/admin
+# DB postgresql
+BACKEND_POSTGRESQL_ROOT_PASSWORD=rootpassword
+BACKEND_POSTGRESQL_USER=user
+BACKEND_POSTGRESQL_DB=backend
+BACKEND_POSTGRESQL_PGDATA=/var/lib/postgresql/data/pgdata
+BACKEND_POSTGRESQL_PORT=5432
+BACKEND_POSTGRESQL_HOST=backend_db_postgres
+BACKEND_POSTGRESQL_DATABASE_URL="postgresql://user:rootpassword@backend_db_postgres:5432/backend"
