--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -29,55 +29,55 @@
     "clean": "rimraf ./node_modules"
   },
   "dependencies": {
-    "@nestjs/common": "^7.4.4",
-    "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.4.4",
-    "@nestjs/jwt": "^7.1.0",
-    "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.4.4",
-    "@nestjs/swagger": "^4.6.0",
-    "@prisma/client": "2.6.2",
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/jwt": "^7.2.0",
+    "@nestjs/passport": "^7.1.5",
+    "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/swagger": "^4.8.0",
+    "@prisma/client": "2.19.0",
     "bcryptjs": "^2.4.3",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
-    "helmet": "^4.1.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "helmet": "^4.4.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "prisma": "^2.19.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "swagger-ui-express": "^4.1.4"
+    "rxjs": "^6.6.6",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.1",
-    "@nestjs/testing": "^7.4.4",
+    "@nestjs/cli": "^7.6.0",
+    "@nestjs/schematics": "^7.3.1",
+    "@nestjs/testing": "^7.6.15",
     "@olavoparno/jest-badges-readme": "^1.5.1",
-    "@prisma/cli": "2.6.2",
-    "@types/express": "^4.17.7",
-    "@types/jest": "26.0.13",
-    "@types/node": "^14.6.4",
-    "@types/passport-jwt": "^3.0.3",
+    "@types/express": "^4.17.11",
+    "@types/jest": "26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
-    "eslint": "^7.8.1",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-airbnb-typescript": "^10.0.0",
-    "eslint-config-prettier": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^24.0.0",
-    "jest": "26.4.2",
-    "lint-staged": ">=10.3.0",
-    "prettier": "^2.1.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "26.3.0",
-    "ts-loader": "^8.0.3",
-    "ts-node": "^9.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.2",
+    "jest": "26.6.3",
+    "lint-staged": ">=10.5.4",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
+    "ts-jest": "26.5.4",
+    "ts-loader": "^8.0.18",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.2.3"
   }
 }
