--- a/packages/backend/prisma/.env
+++ b/packages/backend/prisma/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://user:password@backend_db:3306/backend"
+DATABASE_URL="postgresql://user:rootpassword@localhost:5432/backend"
