--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: "3.8"
 services:
 
-  backend_db:
-    image: mysql:8
-    container_name: backend_db
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    environment:
-      - MYSQL_ROOT_PASSWORD=${BACKEND_MYSQL_ROOT_PASSWORD}
-      - MYSQL_DATABASE=${BACKEND_MYSQL_DB}
-      - MYSQL_PASSWORD=${BACKEND_MYSQL_PASSWORD}
-      - MYSQL_USER=${BACKEND_MYSQL_USER}
-    volumes:
-      - ./${DB_FOLDER}/${BACKEND_MYSQL_HOST}:/var/lib/mysql
-    networks:
-      - backend
-    ports:
-      - "3306:3306"
+  # backend_db:
+  #   image: mysql:8
+  #   container_name: backend_db
+  #   command: --default-authentication-plugin=mysql_native_password
+  #   restart: always
+  #   environment:
+  #     - MYSQL_ROOT_PASSWORD=${BACKEND_MYSQL_ROOT_PASSWORD}
+  #     - MYSQL_DATABASE=${BACKEND_MYSQL_DB}
+  #     - MYSQL_PASSWORD=${BACKEND_MYSQL_PASSWORD}
+  #     - MYSQL_USER=${BACKEND_MYSQL_USER}
+  #   volumes:
+  #     - ./${DB_FOLDER}/${BACKEND_MYSQL_HOST}:/var/lib/mysql
+  #   networks:
+  #     - backend
+  #   ports:
+  #     - "3306:3306"
 
   backend_db_postgres:
     image: postgres:latest
