fix(admin): update admin code and fix error on backend

--- a/lerna.json
+++ b/lerna.json
@@ -10,7 +10,7 @@
     "**/__tests__/**",
     "**/*.md"
   ],
-  "npmClient": "npm",
+  "npmClient": "yarn",
   "packages": [
     "packages/*"
   ],
