--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "start:dev": "lerna run start:dev",
     "test": "lerna run test --parallel --",
     "test:cov": "lerna run test:cov --parallel --",
-    "clean": "lerna run clean && rimraf ./node_modules"
+    "clean": "lerna run clean && rimraf ./**/**/node_modules && rimraf ./node_modules"
   },
   "dependencies": {
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
-    "@commitlint/config-lerna-scopes": "^12.1.0",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@commitlint/config-lerna-scopes": "^12.1.1",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lerna": "^4.0.0"
