--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -56,6 +56,7 @@
     "@nestjs/testing": "^7.6.15",
     "@olavoparno/jest-badges-readme": "^1.5.1",
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.5.4",
     "@types/jest": "26.0.23",
     "@types/node": "^15.0.2",
     "@types/passport-jwt": "^3.0.5",
@@ -70,6 +71,7 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.6",
+    "faker": "^5.5.3",
     "jest": "26.6.3",
     "lint-staged": ">=11.0.0",
     "prettier": "^2.2.1",
